--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 
-members = ["common-lib", "day1", "day2", "day3", "day4"]
+members = ["common-lib", "day1", "day2", "day3", "day4", "day5"]
